--- a/cls5/nbproject/project.properties
+++ b/cls5/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=cls5
-main.class=cls5.Cls5
+main.class=cls5.Animal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
